// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copy modules default telemtry 1`] = `
"\\"use strict\\";

var _devtoolsModules = require(\\"devtools/client/debugger/new/dist/vendors\\").vendored[\\"devtools-modules\\"];

var _devtoolsModules2 = _interopRequireDefault(_devtoolsModules);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_devtoolsModules2.default;"
`;

exports[`Copy modules imports 1`] = `
"\\"use strict\\";

var _devtoolsModules = require(\\"devtools/client/debugger/new/dist/vendors\\").vendored[\\"devtools-modules\\"];

var _telemetry = require(\\"devtools/client/shared/telemetry\\");

var _telemetry2 = _interopRequireDefault(_telemetry);

var _reselect = require(\\"devtools/client/debugger/new/dist/vendors\\").vendored[\\"reselect\\"];

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_devtoolsModules.KeyShortcuts;
_reselect.createSelector;
_telemetry2.default;"
`;

exports[`Copy modules single telemetry 1`] = `
"\\"use strict\\";

var _telemetry = require(\\"devtools/client/shared/telemetry\\");

var _telemetry2 = _interopRequireDefault(_telemetry);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_telemetry2.default;"
`;

exports[`Copy modules transforms 1`] = `
"\\"use strict\\";

const obj = {};

function simple(str) {
  const {
    a,
    b
  } = obj;
  console.log(\\"yo\\");
}

function render() {
  return React.createElement(\\"div\\", null, \\"JSX\\");
}

class klass {
  constructor() {
    this.bar = \\"okay\\";

    this.foo = () => \\"yep\\";
  }

}"
`;
